# learn-c

./: .gitignore  CMakeLists.txt
info/: touch.c
mult/: exec.c
playground/: func.c  struct_assign.c  ttyname.c
src/fs/: pathconf.c
src/info/: touch.c
src/io/: error_overwrite.c  fcntl.c  ioctl.c  lseek.c  nonblock.c  overwrite_stdout.c  readwrite.c
src/ipc/: pipe.c  pipe_noblock.c
src/ipc/fifo/: fifo_read.c  fifo_write.c
src/ipc/mmap/: m_file.c  process_r.c  process_w.c
src/mult/: c_system.c  exec.c  group.c  orphan.c  wait.c  waitpid.c  wrapper.c  zombie.c
src/mult/dup/: upper.c  wrapper.c
src/session/: daemon.c  setsid.c
src/signal/: c_signal.c  my_sleep.c  sigaction.c  sigprocmask.c  waitpid_signal.c
src/thread/: attr_detach.c  attr_stack.c  attr_stack_max.c  pthread_create.c
src/thread/lock/: add.c  add_lock.c  add_lock_cycle.c  add_r_w_lock.c
