cmake_minimum_required(VERSION 3.10.2)
project(learn_c C)

set(CMAKE_C_STANDARD 11)

add_executable(touch src/info/touch.c)
add_executable(exec src/mult/exec.c)
add_executable(upper src/mult/upper.c)
add_executable(wrapper src/mult/wrapper.c)
add_executable(wait src/mult/wait.c)
add_executable(group src/mult/group.c)
add_executable(waitpid src/mult/waitpid.c)
add_executable(orphan src/mult/orphan.c)
add_executable(readwrite src/io/readwrite.c)
add_executable(nonblock src/io/nonblock.c)
add_executable(error_overwrite src/io/error_overwrite.c)
add_executable(lseek src/io/lseek.c)
add_executable(fcntl src/io/fcntl.c)
add_executable(ioctl src/io/ioctl.c)
add_executable(overwrite_stdout src/io/overwrite_stdout.c)
