cmake_minimum_required(VERSION 3.10.2)
project(learn_c C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")

add_executable(pathconf src/fs/pathconf.c)
add_executable(touch src/info/touch.c)
add_executable(exec src/mult/exec.c)
add_executable(upper src/mult/dup/upper.c)
add_executable(wrapper src/mult/dup/wrapper.c)
add_executable(wait src/mult/wait.c)
add_executable(group src/mult/group.c)
add_executable(waitpid src/mult/waitpid.c)
add_executable(orphan src/mult/orphan.c)
add_executable(c_system src/mult/c_system.c)
add_executable(readwrite src/io/readwrite.c)
add_executable(nonblock src/io/nonblock.c)
add_executable(error_overwrite src/io/error_overwrite.c)
add_executable(lseek src/io/lseek.c)
add_executable(fcntl src/io/fcntl.c)
add_executable(ioctl src/io/ioctl.c)
add_executable(overwrite_stdout src/io/overwrite_stdout.c)
add_executable(pipe src/ipc/pipe.c)
add_executable(pipe_noblock src/ipc/pipe_noblock.c)
add_executable(fifo_write src/ipc/fifo/fifo_write.c)
add_executable(fifo_read src/ipc/fifo/fifo_read.c)
add_executable(m_file src/ipc/mmap/m_file.c)
add_executable(process_r src/ipc/mmap/process_r.c)
add_executable(process_w src/ipc/mmap/process_w.c)
add_executable(sigprocmask src/signal/sigprocmask.c)
add_executable(sigaction src/signal/sigaction.c)
add_executable(c_signal src/signal/c_signal.c)
add_executable(my_sleep src/signal/my_sleep.c)
add_executable(waitpid_signal src/signal/waitpid_signal.c)
add_executable(setsid src/session/setsid.c)
add_executable(deamon src/session/daemon.c)
add_executable(pthread_create src/thread/pthread_create.c)




add_executable(struct_assign playground/struct_assign.c)
add_executable(ttyname playground/ttyname.c)
add_executable(func playground/func.c)
